--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -67,6 +67,7 @@
         app:layout_constraintStart_toStartOf="@id/country_code_picker"
         app:layout_constraintTop_toBottomOf="@id/country_code_picker" />
 
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/editText_carrierNumber"
         android:layout_width="0dp"
@@ -81,11 +82,11 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_country_code"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/tv_country_code"
         app:layout_constraintTop_toTopOf="@id/tv_country_code"
+        app:layout_constraintVertical_bias="0.55"
         tools:text="123456789000" />
-
-
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_submit"
